alignment and white space fixing

--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -410,7 +410,6 @@ header {
   img {
     display: block;
     width: 100%;
-    height: 100vh;
     max-width: 100%;
     max-height: 100%;
     object-fit: fill;
@@ -481,12 +480,12 @@ header {
       background: linear-gradient(to right,
           #fcd901 0%,
           #fcda01bc 50%,
-          rgba(255, 255, 255, 0) 100%);
+          rgba(255, 255, 255, 0) 90%);
       color: black;
       /*text-transform: capitalize;*/
       backdrop-filter: blur(1px);
       -webkit-backdrop-filter: blur(1px);
-      width: 700px;
+      width: 55%;
     }
 
     .sub-content {
@@ -593,12 +592,10 @@ header {
 
   @media screen and (max-width: 1200px) {
     .context_area {
-      .sub_logo {
-        padding-left: 3rem !important;
-      }
       .sub-content {
         padding-left: 3rem !important;
       }
+
     }
   }
 
@@ -666,7 +663,7 @@ header {
       .since-banner {
         font-size: 1.5rem;
         width: 60%;
-        padding-left: 3rem !important;
+      /*  padding-left: 3rem !important;*/
       }
     }
   }
@@ -818,7 +815,7 @@ header {
       font-weight: 400;
       font-style: normal;
       font-size: 32px;
-      line-height: 1.2;
+      line-height: 1;
       letter-spacing: 0;
       text-align: center;
       margin: 0;
@@ -7529,7 +7526,7 @@ section.key_features .flex.justify-center.mt-10 {
   align-items: center;
 }
 
-@media screen and (max-width: 990px) and (min-width:769) {
+@media screen and (max-width: 990px) and (min-width:769px) {
   section.clients_sec .headings_ {
     padding-top: 5rem !important;
   }
@@ -7544,10 +7541,10 @@ section.key_features .flex.justify-center.mt-10 {
   align-items: center;
   justify-content: center;
   padding: 5rem 0;
-
   .faq_container {
     @media screen and (max-width: 768px) {
       padding: 0 20px;
+
     }
   }
 
@@ -10422,8 +10419,8 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 100vh;
-  padding-top: 7rem;
+  /*min-height: 100vh;
+  /*padding-top: 7rem;*/
   padding-bottom: 7rem;
 
   h1 {
@@ -10461,7 +10458,8 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
   }
 
   @media screen and (max-width: 768px) {
-    padding-bottom: 0;
+    padding-bottom: 0 !important;
+    padding-top: 0 !important;
   }
 }
 
@@ -10497,7 +10495,7 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  min-height: 85vh;
   overflow: hidden;
 
   img {
@@ -10821,7 +10819,7 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
   position: relative;
   width: 100%;
   height: 100vh;
-  min-height: 800px;
+  /*min-height: 800px;*/
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10838,10 +10836,13 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
   }
 
   p {
-    padding-top: 10px;
+    /*padding-top: 10px;*/
     font-family: "Roboto", sans-serif;
+    width: 100%;
+    align-items: center;
     text-align: center;
-    padding-bottom: 20px;
+    
+   /* padding-bottom: 20px;*/
     font-size: 1rem;
   }
 
@@ -11288,7 +11289,7 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
 .openings_sec {
   position: relative;
   padding: 5rem 0;
-  min-height: 100vh;
+ /* min-height: 100vh;*/
   height: 100%;
   width: 100%;
   display: flex;
@@ -11494,7 +11495,7 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
 .Signupsuggetion_sec {
   position: relative;
   padding: 5rem 0;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   height: 100%;
   width: 100%;
   display: flex;
@@ -11573,7 +11574,7 @@ screen and (orientation: portrait) and (min-width: 768px) and (max-width: 1024px
   position: relative;
   height: 100%;
   width: 100%;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   padding-top: 5rem;
 
   h1 {
